Prototype multiplayer support

--- a/public/index.html
+++ b/public/index.html
@@ -6,36 +6,36 @@
 </head>
 
 <body>
-    <h1 id="guess"></h1>
+    <h1 id="guess">Waiting for game to start</h1>
 
-    <button id="a" onClick="guess(this.id)">a</button>
-    <button id="b" onClick="guess(this.id)">b</button>
-    <button id="c" onClick="guess(this.id)">c</button>
-    <button id="d" onClick="guess(this.id)">d</button>
-    <button id="e" onClick="guess(this.id)">e</button>
-    <button id="f" onClick="guess(this.id)">f</button>
-    <button id="g" onClick="guess(this.id)">g</button>
-    <button id="h" onClick="guess(this.id)">h</button>
+    <button id="a" name="all" onClick="guess(this.id)">a</button>
+    <button id="b" name="all" onClick="guess(this.id)">b</button>
+    <button id="c" name="all" onClick="guess(this.id)">c</button>
+    <button id="d" name="all" onClick="guess(this.id)">d</button>
+    <button id="e" name="all" onClick="guess(this.id)">e</button>
+    <button id="f" name="all" onClick="guess(this.id)">f</button>
+    <button id="g" name="all" onClick="guess(this.id)">g</button>
+    <button id="h" name="all" onClick="guess(this.id)">h</button>
     <br>
-    <button id="i" onClick="guess(this.id)">i</button>
-    <button id="j" onClick="guess(this.id)">j</button>
-    <button id="k" onClick="guess(this.id)">k</button>
-    <button id="l" onClick="guess(this.id)">l</button>
-    <button id="m" onClick="guess(this.id)">m</button>
-    <button id="n" onClick="guess(this.id)">n</button>
-    <button id="o" onClick="guess(this.id)">o</button>
-    <button id="p" onClick="guess(this.id)">p</button>
-    <button id="q" onClick="guess(this.id)">q</button>
-    <button id="r" onClick="guess(this.id)">r</button>
-    <button id="s" onClick="guess(this.id)">s</button>
+    <button id="i" name="all" onClick="guess(this.id)">i</button>
+    <button id="j" name="all" onClick="guess(this.id)">j</button>
+    <button id="k" name="all" onClick="guess(this.id)">k</button>
+    <button id="l" name="all" onClick="guess(this.id)">l</button>
+    <button id="m" name="all" onClick="guess(this.id)">m</button>
+    <button id="n" name="all" onClick="guess(this.id)">n</button>
+    <button id="o" name="all" onClick="guess(this.id)">o</button>
+    <button id="p" name="all" onClick="guess(this.id)">p</button>
+    <button id="q" name="all" onClick="guess(this.id)">q</button>
+    <button id="r" name="all" onClick="guess(this.id)">r</button>
+    <button id="s" name="all" onClick="guess(this.id)">s</button>
     <br>
-    <button id="t" onClick="guess(this.id)">t</button>
-    <button id="u" onClick="guess(this.id)">u</button>
-    <button id="v" onClick="guess(this.id)">v</button>
-    <button id="w" onClick="guess(this.id)">w</button>
-    <button id="x" onClick="guess(this.id)">x</button>
-    <button id="y" onClick="guess(this.id)">y</button>
-    <button id="z" onClick="guess(this.id)">z</button>
+    <button id="t" name="all" onClick="guess(this.id)">t</button>
+    <button id="u" name="all" onClick="guess(this.id)">u</button>
+    <button id="v" name="all" onClick="guess(this.id)">v</button>
+    <button id="w" name="all" onClick="guess(this.id)">w</button>
+    <button id="x" name="all" onClick="guess(this.id)">x</button>
+    <button id="y" name="all" onClick="guess(this.id)">y</button>
+    <button id="z" name="all" onClick="guess(this.id)">z</button>
 
     <h2 id="remaining"></h2>
 
